--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="_1453749394_Key" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\1453749394_Key.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="options" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\36[1].png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
